[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Queen/Queen_animations.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=2]

resource_name = "walk"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 7 ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 30, 29 )

[node name="Queen" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
Player_Speed = 200

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
vframes = 2
hframes = 4
frame = 4
_sections_unfolded = [ "Animation", "Offset", "Region" ]

[node name="Anim" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 3.0
anims/idle = SubResource( 1 )
anims/walk = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Collider" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0, 12 )
shape = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="GatherTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="RespawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="RespawnCount" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


